--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: system-ui;
+  font-family: 'Inter', system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #e7f6ff;
@@ -18,6 +18,12 @@ header {
   border-bottom: 1px solid #eaeaea;
   h3,
   p {
+    margin: 0;
+  }
+}
+
+.content {
+  h1 {
     margin: 0;
   }
 }
