--- a/src/index.scss
+++ b/src/index.scss
@@ -27,3 +27,25 @@ header {
     margin: 0;
   }
 }
+
+.card {
+  border: 1px solid #f3f3f3;
+  border-radius: 40px;
+  padding: 30px;
+  width: 220px;
+
+  h5 {
+    font-weight: 400;
+    font-size: 14px;
+  }
+}
+
+.button {
+  box-sizing: border-box;
+  background: #ffffff;
+  border: 1px solid #f2f2f2;
+  border-radius: 8px;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+}
