--- a/src/index.scss
+++ b/src/index.scss
@@ -33,6 +33,16 @@ header {
   border-radius: 40px;
   padding: 30px;
   width: 220px;
+  margin-right: 30px;
+
+  span {
+    opacity: 0.5;
+    font-size: 13px;
+    text-transform: uppercase;
+  }
+  b {
+    font-size: 13px;
+  }
 
   h5 {
     font-weight: 400;
