--- a/src/index.scss
+++ b/src/index.scss
@@ -29,7 +29,10 @@ header {
 }
 .cardBlock {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+  column-gap: 1rem;
+  row-gap: 4rem;
+  justify-items: center;
 }
 
 .card {
