--- a/src/index.scss
+++ b/src/index.scss
@@ -58,7 +58,18 @@ header {
   border-radius: 40px;
   padding: 30px;
   width: 220px;
-  text-align: center;
+  transition: box-shadow 0.2s ease-in-out, transform 0.2 ease-in-out;
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.05);
+    transform: translateY(-5px);
+  }
+
+  .favorite {
+    position: absolute;
+    cursor: pointer;
+  }
 
   span {
     opacity: 0.5;
