--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@ body {
   border-radius: 20px;
   max-width: 1080px;
   margin: 50px auto;
+  margin-bottom: 0;
 }
 
 header {
@@ -43,14 +44,6 @@ header {
     font-size: 16px;
     width: 200px;
   }
-}
-
-.cardBlock {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
-  column-gap: 1rem;
-  row-gap: 4rem;
-  justify-items: center;
 }
 
 .card {
