--- a/src/index.scss
+++ b/src/index.scss
@@ -15,8 +15,7 @@ body {
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
   max-width: 1080px;
-  margin: 50px auto;
-  margin-bottom: 0;
+  margin: 50px auto 0 auto;
 }
 
 header {
@@ -37,6 +36,7 @@ header {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
 
   input {
     border: 0;
@@ -98,50 +98,107 @@ header {
   height: 100%;
 }
 .drawer {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   padding: 30px;
-  width: 385px;
-  right: 0;
+  width: 420px;
   height: 100%;
+  right: 0;
   background: #ffffff;
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-
+  .items {
+    flex: 1;
+    overflow: auto;
+    margin-bottom: 40px;
+  }
   h2 {
     margin: 0;
     font-size: 24px;
   }
+  .cartItem {
+    border: 1px solid #f3f3f3;
+    border-radius: 20px;
+    overflow: hidden;
+    padding: 10px;
+
+    .cartItemImg {
+      height: 70px;
+      width: 70px;
+      background-size: contain;
+      background-position: 0 5px;
+      background-repeat: no-repeat;
+      margin-right: 20px;
+    }
+
+    p {
+      font-size: 16px;
+      margin: 0;
+    }
+    b {
+      font-size: 14px;
+    }
+
+    .removeBtn {
+      opacity: 0.5;
+      cursor: pointer;
+      transition: opacity 0.15s ease-in-out;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
 }
-
-.cartItem {
-  border: 1px solid #f3f3f3;
-  border-radius: 20px;
-  overflow: hidden;
-  padding: 10px;
-
-  .cartItemImg {
-    height: 70px;
-    width: 70px;
-    background-size: contain;
-    background-position: 0 5px;
-    background-repeat: no-repeat;
-    margin-right: 20px;
+.cartTotalBlock {
+  ul {
+    display: block;
+    margin-bottom: 40px !important;
+    li {
+      display: flex;
+      align-items: flex-end;
+      margin-bottom: 20px;
+    }
+    div {
+      flex: 1;
+      height: 1px;
+      border-bottom: 1px dashed #dfdfdf;
+      position: relative;
+      top: -4px;
+      margin: 0 7px;
+    }
   }
 
-  p {
+  .greenButton {
+    width: 100%;
+    height: 55px;
+    background: #9dd558;
+    border-radius: 18px;
+    border: 0;
+    color: #fff;
     font-size: 16px;
-    margin: 0;
-  }
-  b {
-    font-size: 14px;
-  }
-
-  .removeBtn {
-    opacity: 0.5;
+    font-weight: 500;
     cursor: pointer;
-    transition: opacity 0.15s ease-in-out;
+    transition: background 0.2s ease-in-out;
 
     &:hover {
-      opacity: 1;
+      background: darken($color: #9dd558, $amount: 10%);
+    }
+  }
+
+  .greenButton {
+    position: relative;
+
+    &:hover {
+      img {
+        transform: translateX(5px);
+      }
+    }
+    img {
+      position: absolute;
+      right: 30px;
+      top: 20px;
+      transition: transform 0.15s ease-in-out;
     }
   }
 }
