--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #e7f6ff;
+  height: 100%;
 }
 
 * {
@@ -12,10 +13,12 @@ body {
 
 .wrapper {
   background: #ffffff;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
+  box-shadow: 0px 30px 20px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
   max-width: 1080px;
-  margin: 50px auto 0 auto;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 20px;
 }
 
 header {
