--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -30,3 +30,12 @@
     font-size: 14px;
   }
 }
+.button {
+  box-sizing: border-box;
+  background: #ffffff;
+  border: 1px solid #f2f2f2;
+  border-radius: 8px;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+}
