--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -16,6 +16,10 @@
     cursor: pointer;
   }
 
+  .plus {
+    cursor: pointer;
+  }
+
   span {
     opacity: 0.5;
     font-size: 13px;
@@ -28,15 +32,5 @@
   h5 {
     font-weight: 400;
     font-size: 14px;
-  }
-
-  .button {
-    box-sizing: border-box;
-    background: #ffffff;
-    border: 1px solid #f2f2f2;
-    border-radius: 8px;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
   }
 }
