--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,9 @@ header {
 
   .openCart {
     cursor: pointer;
-    margin-right: 10px;
+    margin-right: 30px;
+    img {
+      margin-right: 10px;
+    }
   }
 }
