--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,4 +12,19 @@ header {
       margin-right: 10px;
     }
   }
+
+  .favorite {
+    margin-right: 30px;
+    color: #5c5c5c;
+    cursor: pointer;
+    font-style: 14px;
+
+    span {
+      padding-left: 5px;
+    }
+
+    &:hover {
+      color: #000;
+    }
+  }
 }
