--- a/src/index.scss
+++ b/src/index.scss
@@ -57,7 +57,8 @@ body {
   background: rgba(0, 0, 0, 0.1);
   z-index: 1;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  height: auto;
 }
 .drawer {
   display: flex;
