--- a/src/index.scss
+++ b/src/index.scss
@@ -57,8 +57,7 @@ body {
   background: rgba(0, 0, 0, 0.1);
   z-index: 1;
   width: 100%;
-  min-height: 100%;
-  height: auto;
+  height: 100%;
 }
 .drawer {
   display: flex;
@@ -71,7 +70,10 @@ body {
   background: #ffffff;
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
   .items {
+    display: flex;
+    flex-direction: column;
     flex: 1;
+    justify-content: space-between;
     overflow: auto;
     margin-bottom: 40px;
   }
@@ -134,6 +136,9 @@ body {
   }
 }
 .cartTotalBlock {
+  display: flex;
+  flex-direction: column;
+
   ul {
     display: block;
     margin-bottom: 40px !important;
