Вынес отображение корзины в отдельный компонент, сделал логику через стейт отражения инфомации Пустая корзина, Заказ отправлен, сденлал очищение корзины только локально, также поправил стили для корректного отображения карточек на главной

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -14,7 +14,20 @@
     position: absolute;
     cursor: pointer;
   }
+  .itemInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
+    .title {
+      height: 90px;
+    }
+  }
+
+  .priceBlock {
+    display: flex;
+    justify-content: space-between;
+  }
   .plus {
     cursor: pointer;
   }
