Создал страницу заказов и прокинул роуты

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,6 +50,13 @@ header {
       color: #000;
     }
   }
+
+  .orders {
+    cursor: pointer;
+    &:hover {
+      color: #000;
+    }
+  }
 }
 //Header
 
